--- a/web/css/grid.css
+++ b/web/css/grid.css
@@ -21,25 +21,31 @@
     padding-right: 0;
 }
 
-.col-1-2 {
-    width: 50%;
-}
+.col-1-2 { width: 50%; }
+.col-2-2 { width: 100%; }
 
-.col-2-2 {
-    width: 100%;
-}
+.col-1-3 { width: 33.3%; }
+.col-2-3 { width: 66.6%; }
+.col-3-3 { width: 100%; }
 
-.col-1-3 {
-    width: 33.3%;
-}
+.col-1-5 { width: 20%; }
+.col-2-5 { width: 40%; }
+.col-3-5 { width: 60%; }
+.col-4-5 { width: 80%; }
+.col-5-5 { width: 100%; }
 
-.col-2-3 {
-    width: 66.6%;
-}
-
-.col-3-3 {
-    width: 100%;
-}
+.col-1-12 { width: 8.3%; }
+.col-2-12 { width: 16.6%; }
+.col-3-12 { width: 25%; }
+.col-4-12 { width: 33.3%; }
+.col-5-12 { width: 41.6%; }
+.col-6-12 { width: 50%; }
+.col-7-12 { width: 58.3%; }
+.col-8-12 { width: 66.6%; }
+.col-9-12 { width: 75%; }
+.col-10-12 { width: 83.3%; }
+.col-11-12 { width: 91.6% }
+.col-12-12 { width: 100%; }
 
 .grid:after {
     content: "";
