Tinker with CSS.

--- a/web/css/navigation.css
+++ b/web/css/navigation.css
@@ -1,17 +1,11 @@
 .navigation {
-    background-color: white;
-    border-bottom: 1px solid black;
-    margin: 0;
-    padding: 0.5em;
+    padding-left: 0.5em;
     list-style-type: none;
     font-size: large;
 }
 
-.navigation a {
-    color: black;
-}
-
 .navigation li {
     display: inline-block;
+    padding-right: 1em;
 }
 
