--- a/web/css/form.css
+++ b/web/css/form.css
@@ -5,14 +5,13 @@ div.aligned div.group {
 
 div.aligned div.group label {
     text-align: right;
-    display: inline-block;
-    /*width: 10em;*/
+    display: block;
+    width: 100%;
     padding-right: 0.5em;
 }
 
-div.aligned div.group input, div.aligned div.group textarea {
-    display: inline-block;
-    width: 50%;
+div.aligned div.group label > input, div.aligned div.group label > textarea {
+    width: 30%;
     margin-right: 0;
 }
 
