Highlight table rows on mouse over.

--- a/web/css/table.css
+++ b/web/css/table.css
@@ -2,3 +2,11 @@
     width: 100%;
 }
 
+.action-table tr {
+    cursor: pointer;
+}
+
+.action-table tr:hover {
+    background-color: lightgrey;
+}
+
